test_files/netlist_footer_cmp/invalid/invalid_case_07_a.net
V1 IN 0 5
R1 IN OUT 1k
C1 OUT 0 1u
.tran 0 1m 0 1u
.save V(OUT)
.backanno
.end
